added writing on linked data & metadata interop

--- a/qri-deterministic_querying/v2.md
+++ b/qri-deterministic_querying/v2.md
@@ -203,11 +203,18 @@ Put this as a final paragraph in this section
 In the spirit of Open Data, it's important to acknowledge and support uses outside of these techniques.  Storing data in common formats reduces friction, allowing data to flow freely between ecosystems.  It is my view that the performance penalties incurred by storing data in common formats are worth paying in favor of interoperability.  Some of these performance penalties can be compensated for through sidecar lookup tables, which represent a future area of research.
 -->
 
-# Distributed queries and linked data
+# Distributed queries, linked data
 
-<!--
-Schemes for linking distributed data sets also exist, particularly in the form of Linked Data [@heath2011linked], but the methods of querying and accessing data currently involve database access and retrieval
--->
+Schemes for linking distributed data sets also exist, particularly in the form of Linked Data [@heath2011linked], but the methods of querying and accessing data currently involve database access and retrieval. With the approach outlined here, the result of any operation upon a dataset is a structure that can be utilized by any number of outside tools capable of parsing widely-adopted formats. It is an explicit design goal to present natural interoperability. It should be possible to traverse all recorded operations without the use of any database technology.
+
+By forcing the database to output to a standard format, the version or entire applicaiton that operates on a dataset can change at any step in the history of changes to a dataset, so long as it maintains the key linked-data characteristics. This makes it possible to chain use of different tools together that operate on the same graph of datasets, selecting the most appropriate tool for a given task. These common formats also provide a degree of future-proofing, allowing the results of using a tool to be utilized long after the usefulness of the tool itself has expired.
+
+The first step toward realizing the value of this interoperability will be to add support for the InterPlanetary Linked Data specification, IPLD [@ipld2017]. Through use of an IPLD _adapter_ it will be possible to coordinate query results with other linked data structures like blockchain-based cryptocurrencies or git version histories. This data-format bridging opens up possilibities like creating smart contracts on data procuring & fullfillment (ehterium-qri linking), or syncing formal data schemas & test data with source code (git-qri linking).
+
+
+## Metadata Interoporability
+
+Aside from the caveat of using content-addressed identifiers instead of urls, it is an express design goal that first-order metadata be collected with an eye toward supporting existing metadata formats, deriving as many hard-earned lessons as possible from the Collections, Libraries, Archives & Muesum communities (CLAM). Datasets can and should support arbitrary metadata, but at the same time must place restrictions on the use of reserved keywords. These restrictions will be designed to maximize the potential to transpose dataset metadata into a number of existing archival metadata formats, including the Data Catalog vocabulary [@dcat2014], the open knowledge foundation datapackage format, schema.org, and the CKAN/DKAN, dataverse apis. by making use of same-term metata wherever possible, and placing restrictions on fields that intersect & cover the minimums of these formats, we leave open the potential to write libraries that transpose dataset data between all of these specifications.
 
 # Discussion
 
