WIP: query section.

--- a/qri-deterministic_querying/v2.md
+++ b/qri-deterministic_querying/v2.md
@@ -164,7 +164,7 @@ As illustrated above, a `Dataset` references one `Data` and one `Structure` obje
 
 1. The same data can be described by different metadata.  For example, a repeated experiment may produce identical data, but it should be described differently if only to indicate different time stamps or conditions.  Separating the description from the values saves storage and bandwidth because only the changes (the metadata) are stored separately.
 
-2. Metadata formats can be changed and updated independently.  In many cases, data remains static after it is gathered.  Software frameworks, however, often change rapidly, and developers and users find needs to change and update metadata about data.  With this separation, metadata can be changed without changing the underlying data.
+2. Metadata formats can be changed and updated independently.  In many cases, data remains static after it is gathered.  Software frameworks, however, often change rapidly, and developers and users find needs to change and update metadata about data.  With the separation described here, metadata can be changed without changing the underlying data objects.  This not only save resources: it makes clear in a concrete way that _it is the same data_.
 
 To retain a trail of changes, `Dataset` contains a field called `previous` that references the hash of another `Dataset` object.  This establishes a clear history of changes to any component of a data set, whether this is the metadata, or the `Data`, or the `Structure`.  For example, when changes are made to metadata without changing the `Data` or its `Structure`, only the `Dataset` object needs to change:
 
@@ -172,27 +172,63 @@ To retain a trail of changes, `Dataset` contains a field called `previous` that 
 <img src="graphics/metadata-changes.png">
 </p>
 
-Conversely, if the `Data` changes but the `Structure` does not, the new `Dataset` object will also reference the hash of the new `Data` object:
+Conversely, if the `Data` changes but the `Structure` does not, the new `Dataset` object will reference the hash of a new `Data` object but point to the same `Structure`:
 
 <p align="center">
 <img src="graphics/data-changes.png">
 </p>
 
-Finally, if the `Structure` changes, the `Data` necessarily changes as well:
+Finally, if the `Structure` changes, the `Data` necessarily changes as well, which means the new `Dataset` object points to new `Structure` and `Data` objects.  This indicates that the underlying data set has changed in such a way---either in structure or in values---that its hash signature is no longer the same.
 
 <p align="center">
 <img src="graphics/structure-changes.png">
 </p>
 
-In each case, the `Dataset` identifies the unique `Structure` object that defines the format of the data in the `Data` object(s), and the value of the `previous` has points to any previous `Dataset` definition that may have come before.
-
+In each case above, the `Dataset` identifies the unique `Structure` object that defines the format of the data in the `Data` object(s), and the value of the `previous` has points to any previous `Dataset` definition that may have come before.
 
 
 ## `Query`
 
+In the abstract, information retrieval is the process of obtaining information from resources by posing questions [@sanderson2012history].  In contemporary computer terms, those "questions" are expressed in some formal language and acted upon by computer programs.  Information can be retrieved from many different kinds of resources; when the resources are databases, we speak of _database queries_.  We focus initially on the world's most widely-used database query language, SQL (Structured Query Language), which has a long history [@chamberlin2009sql], a syntax standardized by ISO [@iso2016sql], and is the basis of very many database-powered software systems in the world today.  As will become clear, the approach described here is not limited to SQL---any query language syntax that obeys similar principles and can be processed in similar ways can be used in deterministic queries.
 
+Queries written in SQL make reference to columns in a tabular database, and express conditions that values must satisfy to be selected.  Here is an example:
+
+```sql
+SELECT a.datestamp, a.lat, a.lng, a.precip FROM a WHERE a.precip > 2.0
+```
+
+This query references a table in a database (`a`) and columns within that table (`a.datestamp`, `a.lat`, `a.lng`, `a.precip`), and stipulates a conditional expression (`a.precip > 2.0`) that certain column values must satisfy.  Note that this query knows nothing about the nature of the database: all that matters is that the table has four columns and the expression `a.precip > 2.0` makes syntactic sense for the kinds of values in the table.  Although labels such as `lat`, `lng` and `precip` may have meaning to human readers, in reality the labels in SQL have absolutely no semantic meaning to the database itself.  This concept is nothing new---it is by design in SQL, so that database systems can be applied to many uses and types of data.
+
+Now suppose we separate the table column references in such a way that the query is written in an abstract, independent way, and the binding of table columns in the query to table columns in an actual data set is maintained separately.  This _abstract query_ can be written by establishing some conventions, for example to use labels of the form `col_0`, `col_1`, `col_2`, etc., for the table columns.  An abstract query written in a standard form might look like this:
+
+```sql
+SELECT a.col_0, a.col_1, a.col_2, a.col_3 FROM a WHERE a.precip > 2.0
+```
+
+Now further suppose we define the shape of `a` using a `Structure` object, described above.  This defines precisely the types of data values expected for each column in the query, as well as other properties of the data.  And naturally, we can do the same for the _result_ of the query: use another `Structure` object to describe the form of the data that the query will produce.
+
+<p align="center">
+<img src="graphics/query.png">
+</p>
+
+This query is now independent of the semantics of the data: it operates on the form of the data and can be applied to any data that matches the description in the `Structure` of the input.  What's more, assuming that we define clear rules for writing these queries in a standard, consistent form, the same query will _always have the same hash value_ even if it is regenerated by different processes at different times in different locations.  And of course, the `Structure` objects for both the input and output are defined by their hashes.
+
+
+```json
+{
+  "syntax" : "sql",
+  "structures" : {
+    "a" : "1220c9bb19b66f7960b6ab7624b9e043969e2ba7181e834441c0303d872832d3fd50",
+  },
+  "statement" : "SELECT a.col_0, a.col_1, a.col_2, a.col_3 FROM a WHERE a.precip > 2.0",
+  "outputStructure" : "1224c9bb19b441c0303d872832d3fd5066f7960b6ab7624b9e043969e2ba7181e834"
+}
+```
 
 ## Query execution
+
+
+
 
 <!--
 
