WIP more text and diagrams

--- a/qri-deterministic_querying/v2.md
+++ b/qri-deterministic_querying/v2.md
@@ -227,17 +227,26 @@ This query is now independent of the semantics of the data: it operates on the f
 
 ## Query execution
 
+Excuting a query is conceptually simple, and requires only a consistent procedure for the process.  A query engine can proceed roughly as follows:
+
+1. A user's database query is obtained from an external mechanism (such as a user interface, or another software system).  The concrete, specific query expression and any data that it refers to are used to create an initial `Dataset` object with references to `Data` hashes as needed.
+
+2. The original query is parsed to produce internal Abstract Syntax Tree (AST) representation (a standard approach for parsing and manipulating structured languages).
+
+3. The query engine rewrites the AST.  First, it examines the different parts of the query AST and processes any aliasing statements (e.g., an expression such as `SELECT foo AS bar ...` in SQL) or other modifications. The engine rewrites the AST to produce a "pure" version of the original query in which indirections and aliases have been removed.  It then records the mappings between entities such as tables and columns in `Data` objects; this is done for both the inputs and outputs of the query expression.  Finally, it rewrites the AST to convert data resource references into abstract resource references.  In our example above, this is the step that converts query references like `a.datestamp` into `a.col_0`.
+
+4. Next, the engine executes the query.
+
+5. The query engine writes the results to IPFS as a `Dataset` object, writing the `Data`, `Query` and `Structure` hash references into the `Dataset`, and saving the output `Data` too.
+
+<p align="center">
+<img src="graphics/query-processing.png">
+</p>
 
 
+## Query output
 
-<!--
 
-structure/previous
-
-Put this as a final paragraph in this section 
-
-In the spirit of Open Data, it's important to acknowledge and support uses outside of these techniques.  Storing data in common formats reduces friction, allowing data to flow freely between ecosystems.  It is my view that the performance penalties incurred by storing data in common formats are worth paying in favor of interoperability.  Some of these performance penalties can be compensated for through sidecar lookup tables, which represent a future area of research.
--->
 
 # Distributed queries, linked data
 
@@ -253,6 +262,13 @@ The first step toward realizing the value of this interoperability will be to ad
 Aside from the caveat of using content-addressed identifiers instead of urls, it is an express design goal that first-order metadata be collected with an eye toward supporting existing metadata formats, deriving as many hard-earned lessons as possible from the Collections, Libraries, Archives & Muesum communities (CLAM). Datasets can and should support arbitrary metadata, but at the same time must place restrictions on the use of reserved keywords. These restrictions will be designed to maximize the potential to transpose dataset metadata into a number of existing archival metadata formats, including the Data Catalog vocabulary [@dcat2014], the open knowledge foundation datapackage format, schema.org, and the CKAN/DKAN, dataverse apis. by making use of same-term metata wherever possible, and placing restrictions on fields that intersect & cover the minimums of these formats, we leave open the potential to write libraries that transpose dataset data between all of these specifications.
 
 # Discussion
+
+<!--
+
+Put this somewhere
+
+In the spirit of Open Data, it's important to acknowledge and support uses outside of these techniques.  Storing data in common formats reduces friction, allowing data to flow freely between ecosystems.  It is my view that the performance penalties incurred by storing data in common formats are worth paying in favor of interoperability.  Some of these performance penalties can be compensated for through sidecar lookup tables, which represent a future area of research.
+-->
 
 
 <!-- Refs are added automatically by Pandoc after this next section -->
