WIP more text and diagrams

--- a/qri-deterministic_querying/v2.md
+++ b/qri-deterministic_querying/v2.md
@@ -76,7 +76,7 @@ The intent is not to eliminate database technologies in all situations. Rather, 
 
 The approach described here will be best suited to certain use cases.  The efficacy of this technique is inversely correlated to how frequently the underlying data changes; data that is not mutated after initial insertion is ideal for this approach.  Thankfully, many data sets fall into this category, including scientific research data, government data, industrial data, and more.  We contend that the development of deterministic querying offers a way to build an open data commons to provide greater opportunity for the collective, accumulative advancement of open data.
 
-# Data, hashes, queries and graphs
+# Data, data structures, hashes, and queries
 
 _Deterministic querying_ is designed for content-addressed network systems. In content-based addressing, data is stored and retrieved not by its location (as is done in the current Web via HTTP), but rather by a function computed over its content---specifically, a hash function that uniquely identifies the content [@aurora2007code].  This _content address_ can be computed independently by anyone for any content simply by running the hash function; they do not require a centralized authority to coordinate the assignment of labels or addresses.  This decentralized approach is the foundation of an emerging, modern, reliable data commons that deterministic querying aims to support.
 
@@ -246,22 +246,55 @@ Excuting a query is conceptually simple, and requires only a consistent procedur
 
 ## Query output
 
+**TO BE COMPLETED---STILL UNCLEAR HOW THIS PART WORKS**
 
 
-# Distributed queries, linked data
-
-Schemes for linking distributed data sets also exist, particularly in the form of Linked Data [@heath2011linked], but the methods of querying and accessing data currently involve database access and retrieval. With the approach outlined here, the result of any operation upon a dataset is a structure that can be utilized by any number of outside tools capable of parsing widely-adopted formats. It is an explicit design goal to present natural interoperability. It should be possible to traverse all recorded operations without the use of any database technology.
-
-By forcing the database to output to a standard format, the version or entire applicaiton that operates on a dataset can change at any step in the history of changes to a dataset, so long as it maintains the key linked-data characteristics. This makes it possible to chain use of different tools together that operate on the same graph of datasets, selecting the most appropriate tool for a given task. These common formats also provide a degree of future-proofing, allowing the results of using a tool to be utilized long after the usefulness of the tool itself has expired.
-
-The first step toward realizing the value of this interoperability will be to add support for the InterPlanetary Linked Data specification, IPLD [@ipld2017]. Through use of an IPLD _adapter_ it will be possible to coordinate query results with other linked data structures like blockchain-based cryptocurrencies or git version histories. This data-format bridging opens up possilibities like creating smart contracts on data procuring & fullfillment (ehterium-qri linking), or syncing formal data schemas & test data with source code (git-qri linking).
-
-
-## Metadata Interoporability
+## Requirements for metadata interoperability
 
 Aside from the caveat of using content-addressed identifiers instead of urls, it is an express design goal that first-order metadata be collected with an eye toward supporting existing metadata formats, deriving as many hard-earned lessons as possible from the Collections, Libraries, Archives & Muesum communities (CLAM). Datasets can and should support arbitrary metadata, but at the same time must place restrictions on the use of reserved keywords. These restrictions will be designed to maximize the potential to transpose dataset metadata into a number of existing archival metadata formats, including the Data Catalog vocabulary [@dcat2014], the open knowledge foundation datapackage format, schema.org, and the CKAN/DKAN, dataverse apis. by making use of same-term metata wherever possible, and placing restrictions on fields that intersect & cover the minimums of these formats, we leave open the potential to write libraries that transpose dataset data between all of these specifications.
 
-# Discussion
+
+# Properties of deterministic querying
+
+The combination of IPFS and the machinery described above gives us the following.  First, raw data in a file is _permanently_, _uniquely_ identified by a cryptographic hash: given such a hash, we can retrieve the corresponding `Data` object from IPFS and we can be sure that what we get is the data set that was stored at that hash.  Second, describe the format of a raw data file using a reusable `Structure` object that provides information about the shape and other characteristics of the data.  Like the data itself, the definition is hashed to IPFS, giving it a permanent, unique identifier.  Third, a connection between a given `Structure` and a `Data` object, along with associated metadata, is stored in a `Dataset` object that uses the unique hashes to identify the data and the structure definition unambiguously.  Finally, data queries and transformations are expressed in a canonical form using a reusable `Query` object that is defined in terms of `Structure` rather than specific data sets, thus making it reusable---and this, too, is hashed to IPFS.
+
+With this in place, we also have _deterministic results_.  Upon successfully executing a query, we can write the query and its resulting data to the network; the results will be one or more `Data` object, described by one or more `Structure` object.  The results are deterministic because _any software using the same data, structure definition, and query definition, will obtain the same results_, regardless of where, when or why it is done.
+
+This leads to several useful properties, described below.
+
+## Discoverability
+
+The fact that the results of a query follow a consistent protocol and are written permanently to IPFS means that if the results of a query have already been computed and stored, other software systems can discover the results _before_ they attempt to compute them.  What's more, since the results are described using lightweight `Structure` and `Dataset` objects, users can make these discoveries without downloading potentially large data sets.  Thus, before excuting a query, a software tool can calculate the hash of the `Query` and check IPFS for the existence of that hash value.  If it exists, the results may be loaded from the network instead of being recomputed.
+
+There is an additional, even more powerful implication than the simple savings in computations.  Given a results hash ... **TO BE COMPLETED---STILL UNCLEAR HOW THIS PART WORKS**
+
+
+## Immutability and defensibility
+
+In many data use scenarios, it is important to know that a given data set has not been altered.  This is often difficult to ensure.  For example, a URL may refer to a data set on the web, and the resource holding that data set may claim that it is the original data stored in that file at that URL---but it could have been corrupted or purposefully altered, and for most of the popular data formats in use today, it would be difficult for the recipient to discover this.
+
+The use of a cryptographic hashes to identify data virtually eliminates this possibility.  If you publish the hash of a given data set in IPFS, it is permanent: if you obtain the data set that someone claims is the corresponding data for the hash you give them, you can compute hash of the given data file yourself and verify that it has not been altered.  Moreover, in the deterministic querying scheme, this immutability applies not only to the data, but to _the entire chain of processes that produce results_ from one set of `Data` objects to others.
+
+Do you want to claim that a certain series of data manipulation and calculations produces a certain result?  With deterministic querying, you can prove it incontrovertibly.
+
+## Software independence
+
+By forcing the database to output to a standard format, the software version (even the entire application) that operates on a data set can change at any point in the history of changes to a dataset.  The software implementation does not matter, as long as it works according to the procedures described here, and reads and writes data and queries in the standard format defined by deterministic querying.  This makes it possible to swap out different tools in the chain of operations, whether to take advantage of implementation improvements (perhaps because more efficient software is developed) or to optimize other characteristics.  It also provides future-proofing: the results of using a tool can persist long after the usefulness of the tool itself has expired.
+
+
+# Integration with linked data
+
+Other schemes for linking distributed data sets exist, particularly in the form of Linked Data [@heath2011linked], but the methods of querying and accessing data currently involve database access and retrieval. With the approach outlined here, the result of any operation upon a dataset is a structure that can be utilized by any number of outside tools capable of parsing widely-adopted formats. It is an explicit design goal to present natural interoperability. It should be possible to traverse all recorded operations without the use of any database technology.
+
+The first step toward realizing the value of this interoperability will be to add support for the InterPlanetary Linked Data specification, IPLD [@ipld2017]. Through use of an IPLD _adapter_ it will be possible to coordinate query results with other linked data structures like blockchain-based cryptocurrencies or git version histories. This data-format bridging opens up possilibities like creating smart contracts on data procuring & fullfillment (ehterium-qri linking), or syncing formal data schemas & test data with source code (git-qri linking).
+
+**TO BE COMPLETED**
+
+
+# Conclusion
+
+**TO BE COMPLETED**
+
 
 <!--
 
