update hash references to base58

--- a/qri-deterministic_querying/v2.md
+++ b/qri-deterministic_querying/v2.md
@@ -106,10 +106,10 @@ lat,lng,precip,datestamp,title
 ...
 ```
 
-A `Data` object in a content-addressed file system will be a static object identified by a hash value (henceforth, to be called simply its _hash_).  Assume that this data file resolves to the following hash on the network:
+A `Data` object in a content-addressed file system will be a static object identified by a hash value (henceforth, to be called simply its _hash_).  Assume that this data file resolves to the following base58-encoded hash on the network:
 
 ```
-1220cb90f19d806704600e32b152afbad9fdfc91b0216e15585f9fc1044d44c72d5b
+QmNk2XkDpn8vBantgpHt6B52kcyfHcQVJUF4QzDqjiGu52
 ```
 
 As discussed above, this hash will be unique: any file whose computed hash matches the one above _will contain the same content_, no matter how or where it was created (assuming we use the same conventions for line endings, spaces and some other details), or where it's physically located in the content-addressed file system.  Queries to this data file will always run against the same set of bytes because the hash is _deterministic_.
@@ -218,10 +218,10 @@ This query is now independent of the semantics of the data: it operates on the f
 {
   "syntax" : "sql",
   "structures" : {
-    "a" : "1220c9bb19b66f7960b6ab7624b9e043969e2ba7181e834441c0303d872832d3fd50",
+    "a" : "/ipfs/QmNxLFUUvPEY55E1DGLmBKJa51CmHAuoUqfLE6CetxqvvV",
   },
-  "statement" : "SELECT a.col_0, a.col_1, a.col_2, a.col_3 FROM a WHERE a.precip > 2.0",
-  "outputStructure" : "1224c9bb19b441c0303d872832d3fd5066f7960b6ab7624b9e043969e2ba7181e834"
+  "statement" : "SELECT a.col_0, a.col_1, a.col_2, a.col_3 FROM a WHERE a.col_3 > 2.0",
+  "outputStructure" : "/ipfs/QmP6XohRBYc8y52dpyJsANYq1SZBzy618t388Wk2SPKNG9"
 }
 ```
 
