After conv w b5, omitting part about query tracking

--- a/qri-deterministic_querying/v2.md
+++ b/qri-deterministic_querying/v2.md
@@ -5,7 +5,8 @@
 <a href="http://www.cds.caltech.edu/~mhucka/">Michael Hucka</a>
 </p>
 <p align="center">
-August 2017
+August 2017<br>
+*DRAFT*
 </p>
 <p align="center">
 <b>Abstract</b>
@@ -344,7 +345,11 @@ This leads to several useful properties, described below.
 
 The fact that the results of a query follow a consistent protocol and are written permanently to IPFS means that if the results of a query have already been computed and stored, other software systems can discover the results _before_ they attempt to compute them.  What's more, since the results are described using lightweight `Structure` and `Dataset` objects, users can make these discoveries without downloading potentially large data sets.  Thus, before excuting a query, a software tool can calculate the hash of the `Query` and check IPFS for the existence of that hash value.  If it exists, the results may be loaded from the network instead of being recomputed.
 
+<!--
+2017-08-27 decided to leave this out for now.  This requires tracking queries, which Qri does, but is not a deterministic querying concept per se.
+
 There is an additional, even more powerful implication than the simple savings in computations.  Given a results hash ... **TO BE COMPLETED---STILL UNCLEAR HOW THIS PART WORKS**
+-->
 
 
 ## Immutability and defensibility
