Starting another section, on efficiency concerns

--- a/qri-deterministic_querying/v2.md
+++ b/qri-deterministic_querying/v2.md
@@ -374,6 +374,11 @@ The first step toward realizing the value of this interoperability will be to ad
 **TO BE COMPLETED**
 
 
+# Efficiency concerns
+
+**TO BE COMPLETED**
+
+
 # Conclusion
 
 **TO BE COMPLETED**
