Add section on storage efficiency & shuffle order of sections

--- a/qri-deterministic_querying/v2.md
+++ b/qri-deterministic_querying/v2.md
@@ -332,6 +332,40 @@ FIXME not sure if this is still needed:
 Aside from the caveat of using content-addressed identifiers instead of URLs, it is an express design goal that first-order metadata supported in datasets in this scheme be collected with an eye toward supporting existing metadata formats.
 -->
 
+# Integration with linked data
+
+Other schemes for linking distributed data sets exist, particularly in the form of Linked Data [@heath2011linked], but the methods of querying and accessing data currently involve database access and retrieval. With the approach outlined here, the result of any operation upon a dataset is a structure that can be utilized by any number of outside tools capable of parsing widely-adopted formats. It is an explicit design goal to present natural interoperability. It should be possible to traverse all recorded operations without the use of any database technology.
+
+The first step toward realizing the value of this interoperability will be to add support for the InterPlanetary Linked Data specification, IPLD [@ipld2017]. Through use of an IPLD _adapter_ it will be possible to coordinate query results with other linked data structures like blockchain-based cryptocurrencies or git version histories. This data-format bridging opens up possilibities like creating smart contracts on data procuring & fullfillment (ehterium-qri linking), or syncing formal data schemas & test data with source code (git-qri linking).
+
+**TO BE COMPLETED**
+
+
+# Storage efficiency
+
+A natural concern about the scheme described so far is the question of disk space usage.  If every unique data file is saved to IPFS as a separate entity, it may seem that a storage explosion would be unavoidable over the course of using a scheme such as deterministic querying (or indeed IPFS in general).  How can this be mitigated?
+
+## Leveraging the properties of IPFS
+
+IPFS partially solves this problem for us.  An IPFS file store is actually a content-addressed store of file blocks---files are broken into a set of fixed-size blocks that are each content-addressed by hashes.  A file is in reality a collection of references to hashed blocks:
+
+<p align="center">
+<img src="graphics/merkle-dag.png">
+</p>
+
+Crucially, file blocks _can be shared_: after all, if two content blocks hash to the same hash value, their content is identical, which means a given IPFS file store can simply point to the common blocks instead of storing separate copies.  Moreover, as with everything else in IPFS, the hashes are unique across the entire IPFS address space, and so file blocks---parts of files---can be spread across the network.
+
+This can be leveraged further in a deterministic querying system.  In particular, we can take advantage of this feature to avoid duplication of data between slightly-altered files.  Two files that have a similar-enough composition will be automatcally deduplicated upon addition through hash collision.  In a simplified example, adding data to the end of a raw file will result in only a one-block addition, instead of fully duplicating the entire file. This is yet another benefit of using content addressing and the underlying IPFS technology.
+
+<p align="center">
+<img width="35%" src="graphics/qri-deduplication.png">
+</p>
+
+## Implementing efficient file decomposition strategies
+
+A given implementation of deterministic querying can be smarter about file storage, and additional steps can be taken to improve the rate of deduplication.  Using IPLD adapters for common file formats, CSV, JSON, and other files stored with "rows" of entries can be broken into blocks along breaks between rows. By breaking down these blocks into logical parts, we increase the chance of deduplication between files. This can achieve much smaller storage overhead for similar dataset data.
+
+Coupled with the fact that operations on data will be row-oriented. This further opens up possibilities for streaming blocks and distributed computation, given that they will be stored as valid sets of one or more rows.
 
 # Properties of deterministic querying
 
@@ -365,24 +399,15 @@ Do you want to claim that a certain series of data manipulation and calculations
 By forcing the database to output to a standard format, the software version (even the entire application) that operates on a data set can change at any point in the history of changes to a dataset.  The software implementation does not matter, as long as it works according to the procedures described here, and reads and writes data and queries in the standard format defined by deterministic querying.  This makes it possible to swap out different tools in the chain of operations, whether to take advantage of implementation improvements (perhaps because more efficient software is developed) or to optimize other characteristics.  It also provides future-proofing: the results of using a tool can persist long after the usefulness of the tool itself has expired.
 
 
-# Integration with linked data
-
-Other schemes for linking distributed data sets exist, particularly in the form of Linked Data [@heath2011linked], but the methods of querying and accessing data currently involve database access and retrieval. With the approach outlined here, the result of any operation upon a dataset is a structure that can be utilized by any number of outside tools capable of parsing widely-adopted formats. It is an explicit design goal to present natural interoperability. It should be possible to traverse all recorded operations without the use of any database technology.
-
-The first step toward realizing the value of this interoperability will be to add support for the InterPlanetary Linked Data specification, IPLD [@ipld2017]. Through use of an IPLD _adapter_ it will be possible to coordinate query results with other linked data structures like blockchain-based cryptocurrencies or git version histories. This data-format bridging opens up possilibities like creating smart contracts on data procuring & fullfillment (ehterium-qri linking), or syncing formal data schemas & test data with source code (git-qri linking).
-
-**TO BE COMPLETED**
-
-
-# Efficiency concerns
-
-**TO BE COMPLETED**
 
 
 # Conclusion
 
-**TO BE COMPLETED**
+<!--
 
+Deterministic querying promises new capabilities and powers, but it is in its early stages of development; IPFS itself is also still young.  There will surely be more challenges ahead, but 
+
+-->
 
 <!--
 
