Added text from issue #9

--- a/qri-deterministic_querying/v2.md
+++ b/qri-deterministic_querying/v2.md
@@ -403,6 +403,8 @@ By forcing the database to output to a standard format, the software version (ev
 
 # Conclusion
 
+Getting open data to behave like open source software requires a ground up re-think of assumptions as basic as the concept of a database. A once-again emerging distributed web built on foundations of content-addressing presents an opportunity to question such assumptions. The techniques of deterministic querying outlined here represent a new set of patterns that if applied correctly form the basis of an open data commons that naturally increases its capacity through use, for the benefit of all who use it, while still providing room for an evolving tooling ecosystem.
+
 <!--
 
 Deterministic querying promises new capabilities and powers, but it is in its early stages of development; IPFS itself is also still young.  There will surely be more challenges ahead, but 
